--- a/src/BazaPojazdow.form
+++ b/src/BazaPojazdow.form
@@ -10,7 +10,7 @@
       <splitpane id="7030">
         <constraints border-constraint="Center"/>
         <properties>
-          <dividerLocation value="500"/>
+          <dividerLocation value="600"/>
           <dividerSize value="0"/>
           <enabled value="false"/>
           <resizeWeight value="0.0"/>
@@ -18,36 +18,31 @@
         <border type="none"/>
         <children>
           <grid id="dd639" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="5" left="5" bottom="5" right="5"/>
             <constraints>
               <splitpane position="left"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="75447" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <grid id="75447" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="5" left="5" bottom="5" right="5"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
-                <border type="none"/>
+                <properties>
+                  <background color="-12143361"/>
+                </properties>
+                <border type="line"/>
                 <children>
-                  <grid id="5f0ee" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
+                  <grid id="78778" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="5" left="5" bottom="5" right="5"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
-                    <border type="none"/>
-                    <children/>
-                  </grid>
-                  <grid id="78778" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties/>
+                    <properties>
+                      <background color="-12143361"/>
+                    </properties>
                     <border type="none"/>
                     <children>
                       <component id="1a832" class="javax.swing.JLabel">
@@ -55,6 +50,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
+                          <font name="JetBrains Mono ExtraBold" size="16" style="1"/>
                           <text value="Pokaż:"/>
                         </properties>
                       </component>
@@ -62,31 +58,37 @@
                   </grid>
                   <component id="7a4ce" class="javax.swing.JRadioButton" binding="wszystkiePojazdyRadioButton" default-binding="true">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-12143361"/>
+                      <font name="JetBrains Mono Medium" style="1"/>
                       <text value="wszystkie pojazdy"/>
                     </properties>
                   </component>
                   <component id="5751" class="javax.swing.JRadioButton" binding="pojazdyOsoboweRadioButton" default-binding="true">
                     <constraints>
-                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-12143361"/>
+                      <font name="JetBrains Mono Medium" style="1"/>
                       <text value="pojazdy osobowe"/>
                     </properties>
                   </component>
                   <component id="36dd" class="javax.swing.JRadioButton" binding="motoryRadioButton" default-binding="true">
                     <constraints>
-                      <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-12143361"/>
+                      <font name="JetBrains Mono Medium" style="1"/>
                       <text value="motory"/>
                     </properties>
                   </component>
                 </children>
               </grid>
-              <grid id="aafc7" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="aafc7" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -96,16 +98,27 @@
                 <children>
                   <component id="9fa48" class="javax.swing.JButton" binding="wsteczButton" default-binding="true">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <font name="JetBrains Mono Medium" style="1"/>
                       <text value="Wstecz"/>
                     </properties>
                   </component>
+                  <hspacer id="cf326">
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
+                  <hspacer id="55a97">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
                 </children>
               </grid>
               <grid id="91a4f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+                <margin top="5" left="5" bottom="5" right="5"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -116,12 +129,22 @@
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <foreground color="-4473925"/>
+                    </properties>
                     <border type="none"/>
                     <children>
                       <component id="49542" class="javax.swing.JTable" binding="tablePojazdy">
                         <constraints/>
-                        <properties/>
+                        <properties>
+                          <autoCreateRowSorter value="true"/>
+                          <font name="JetBrains Mono Light"/>
+                          <foreground color="-12828863"/>
+                          <gridColor color="-11579054"/>
+                          <selectionBackground color="-11833681"/>
+                          <selectionForeground color="-4473925"/>
+                          <showHorizontalLines value="true"/>
+                        </properties>
                       </component>
                     </children>
                   </scrollpane>
@@ -130,7 +153,7 @@
             </children>
           </grid>
           <grid id="79b51" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="5" left="5" bottom="5" right="5"/>
             <constraints>
               <splitpane position="right"/>
             </constraints>
@@ -146,7 +169,11 @@
                 <children>
                   <component id="f5147" class="javax.swing.JTextArea" binding="szczegolyTextArea">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <font name="JetBrains Mono Medium" size="20" style="1"/>
+                      <lineWrap value="false"/>
+                      <text value="Szczegóły..."/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
@@ -157,7 +184,7 @@
     </children>
   </grid>
   <buttonGroups>
-    <group name="typyPojazdowButtonGroup1">
+    <group name="typyPojazdowButtonGroup">
       <member id="70554"/>
       <member id="28c63"/>
       <member id="7ceb8"/>
